# agents-parliament

./: .gitignore  README.md  install.py  pyproject.toml  uninstall.py
.github/workflows/: deploy.yml  publish.yml
docs/: CLAUDE_SDK_MEMO.md  HOW-MCP-WORKS.md  advanced_features.md  aider.md  amazon_q_developer.md  claude.md  cline.md  gemini_cli.md  goose.md  gpt_engineer.md  grok_and_claude.md  index.html  manus.md  openai_codex_cli.md  script.js  style.css
marketing/: discord.md  hacker-news.md  linkedin.md  product-hunt.md  x-twitter.md
marketing/reddit/: ai-agents.md  artificial.md  artificialintelligence.md  chatgpt.md  claudeai.md  coolgithubprojects.md  entrepreneur.md  internetisbeautiful.md  localllama.md  machinelearning.md  opensource.md  productivity.md  programming.md  sideproject.md  singularity.md  startups.md
marketing/x-communities/: ai-builders.md  generative-ai.md  indie-hackers.md  python-opensource.md
scripts/: test_list_tools.py
src/: claude_mcp_server.py
src/agenters/: a2a_protocol.py  agent_cards.json  aider_mcp_server.py  claude_mcp_server.py  cli.py  codex_mcp_server.py  gemini_mcp_server.py  goose_mcp_server.py  install.py  manus_mcp_server.py  mesh_coordinator.py  uninstall.py
src/agenters/resources/hooks/: pre_commit.sh
src/agenters/resources/playbooks/: research.md
src/agenters/resources/recipes/: full_tdd.md
src/agenters/resources/skills/: code_review.md
tests/: conftest.py  test_cli.py
